{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 25,
  "lineage": "ce2b8f09-dad9-52cf-ce9f-833974de62dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01df7c80e2aa60122",
            "arn": "arn:aws:ec2:eu-west-3:747033881323:instance/i-06d58b775a17d169a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-development-92134-nginx_profile",
            "id": "i-06d58b775a17d169a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0138ec37542c115a8",
            "private_dns": "ip-10-0-0-14.eu-west-3.compute.internal",
            "private_ip": "10.0.0.14",
            "public_dns": "ec2-13-38-13-189.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.13.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e35b4496b71dd292",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce7678879a9f6d82",
            "tags": {
              "Name": "globoweb-Development-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-nginx-0",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071f54c204babd67b"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01df7c80e2aa60122",
            "arn": "arn:aws:ec2:eu-west-3:747033881323:instance/i-0a6e51facf2645a28",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "globoweb-development-92134-nginx_profile",
            "id": "i-0a6e51facf2645a28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0875e437e3bbd141e",
            "private_dns": "ip-10-0-1-120.eu-west-3.compute.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-13-38-111-141.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.111.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057b86978323fdb37",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0261f705b8d1928e2",
            "tags": {
              "Name": "globoweb-Development-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-nginx-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071f54c204babd67b"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globoweb-development-92134",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:loadbalancer/app/globoweb-Development-alb/d466bdaf7b6bb723",
            "arn_suffix": "app/globoweb-Development-alb/d466bdaf7b6bb723",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globoweb-Development-alb-2033129323.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:loadbalancer/app/globoweb-Development-alb/d466bdaf7b6bb723",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globoweb-Development-alb",
            "security_groups": [
              "sg-0eddaae1c4235c459"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0261f705b8d1928e2"
              },
              {
                "subnet_id": "subnet-0ce7678879a9f6d82"
              }
            ],
            "subnets": [
              "subnet-0261f705b8d1928e2",
              "subnet-0ce7678879a9f6d82"
            ],
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-050d948e818f330e5",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:listener/app/globoweb-Development-alb/d466bdaf7b6bb723/2faddaec2c8efaf3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:listener/app/globoweb-Development-alb/d466bdaf7b6bb723/2faddaec2c8efaf3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:loadbalancer/app/globoweb-Development-alb/d466bdaf7b6bb723",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711",
            "arn_suffix": "targetgroup/globoweb-Development-alb-tg/518d861f350af711",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "globoweb-Development-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711-20220406185304235600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711",
            "target_id": "i-06d58b775a17d169a"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711-20220406185304285800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:747033881323:targetgroup/globoweb-Development-alb-tg/518d861f350af711",
            "target_id": "i-0a6e51facf2645a28"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.instance_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:security-group/sg-0eddaae1c4235c459",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eddaae1c4235c459",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globoweb-Development-nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "747033881323",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:security-group/sg-071f54c204babd67b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071f54c204babd67b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globoweb-Development-nginx_sg",
            "name_prefix": "",
            "owner_id": "747033881323",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:internet-gateway/igw-0f6ca6f07fb6760d0",
            "id": "igw-0f6ca6f07fb6760d0",
            "owner_id": "747033881323",
            "tags": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f6ca6f07fb6760d0",
            "id": "r-rtb-0eb79fb8f89275a751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb79fb8f89275a75",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:route-table/rtb-0eb79fb8f89275a75",
            "id": "rtb-0eb79fb8f89275a75",
            "owner_id": "747033881323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0955fc73cea87d1b0",
            "route_table_id": "rtb-0eb79fb8f89275a75",
            "subnet_id": "subnet-0ce7678879a9f6d82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efa0efbde337998c",
            "route_table_id": "rtb-0eb79fb8f89275a75",
            "subnet_id": "subnet-0261f705b8d1928e2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:subnet/subnet-0ce7678879a9f6d82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce7678879a9f6d82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "747033881323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:subnet/subnet-0261f705b8d1928e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0261f705b8d1928e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "747033881323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "vpc_id": "vpc-050d948e818f330e5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:747033881323:vpc/vpc-050d948e818f330e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05223baa97892f6de",
            "default_route_table_id": "rtb-059a744cc01fa9a3c",
            "default_security_group_id": "sg-010610af3398696c9",
            "dhcp_options_id": "dopt-21548849",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-050d948e818f330e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059a744cc01fa9a3c",
            "owner_id": "747033881323",
            "tags": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            },
            "tags_all": {
              "Name": "globoweb-Development-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics - ICO in the cloud",
              "environement": "Development",
              "project": "Globomantics - ICO in the cloud-ico-web-app"
            }
          }
        }
      ]
    }
  ]
}